test/tests/stages/18_structures/invalid_parse/dot_operator_in_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  struct
  identifier(pair)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(pair)
  identifier(x)
  .
  identifier(a)
  =
  const int(10)
  ;
  }
